parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> classlist
Rule 2     classlist -> <empty>
Rule 3     classlist -> class SEMI classlist
Rule 4     class -> CLASS type LBRACE featurelist RBRACE
Rule 5     class -> CLASS type INHERITS type LBRACE featurelist RBRACE
Rule 6     type -> TYPE
Rule 7     identifier -> IDENTIFIER
Rule 8     featurelist -> <empty>
Rule 9     featurelist -> feature SEMI featurelist
Rule 10    feature -> identifier LPAREN formals RPAREN COLON type LBRACE exp RBRACE
Rule 11    feature -> identifier LPAREN RPAREN COLON type LBRACE exp RBRACE
Rule 12    feature -> identifier COLON type
Rule 13    feature -> identifier COLON type LARROW exp
Rule 14    formals -> formal
Rule 15    formals -> formal COMMA formals
Rule 16    formals -> <empty>
Rule 17    formal -> identifier COLON type
Rule 18    exp -> exp PLUS exp
Rule 19    exp -> exp MINUS exp
Rule 20    exp -> exp TIMES exp
Rule 21    exp -> exp DIVIDE exp
Rule 22    exp -> TILDE exp
Rule 23    exp -> exp LT exp
Rule 24    exp -> exp LE exp
Rule 25    exp -> exp EQUALS exp
Rule 26    exp -> NOT exp
Rule 27    exp -> LPAREN exp RPAREN
Rule 28    exp -> INTEGER
Rule 29    exp -> STRING
Rule 30    exp -> TRUE
Rule 31    exp -> FALSE
Rule 32    exp -> ISVOID exp
Rule 33    exp -> NEW type
Rule 34    exp -> identifier LARROW exp
Rule 35    exp -> identifier LPAREN exp_list RPAREN
Rule 36    exp -> identifier LPAREN RPAREN
Rule 37    exp -> exp identifier LPAREN exp_list RPAREN
Rule 38    exp -> exp identifier LPAREN RPAREN
Rule 39    exp -> exp DOT identifier LPAREN exp_list RPAREN
Rule 40    exp -> exp DOT identifier LPAREN RPAREN
Rule 41    exp -> IF exp THEN exp ELSE exp FI
Rule 42    exp -> WHILE exp LOOP exp POOL
Rule 43    exp -> LBRACE exp_list_semi RBRACE
Rule 44    exp -> LET let_list IN exp
Rule 45    let_list -> identifier COLON type
Rule 46    let_list -> identifier COLON type LARROW exp
Rule 47    let_list -> identifier COLON type COMMA let_list
Rule 48    let_list -> identifier COLON type LARROW exp COMMA let_list
Rule 49    exp -> CASE exp OF case_list ESAC
Rule 50    case_list -> identifier COLON type RARROW exp
Rule 51    case_list -> identifier COLON type RARROW exp SEMI case_list
Rule 52    case_list -> <empty>
Rule 53    exp -> exp AT type DOT identifier LPAREN exp_list RPAREN
Rule 54    exp_list -> exp
Rule 55    exp_list -> exp COMMA exp_list
Rule 56    exp_list_semi -> exp SEMI
Rule 57    exp_list_semi -> exp SEMI exp_list_semi
Rule 58    exp -> identifier

Terminals, with rules where they appear

AT                   : 53
CASE                 : 49
CLASS                : 4 5
COLON                : 10 11 12 13 17 45 46 47 48 50 51
COMMA                : 15 47 48 55
DIVIDE               : 21
DOT                  : 39 40 53
ELSE                 : 41
EQUALS               : 25
ESAC                 : 49
FALSE                : 31
FI                   : 41
IDENTIFIER           : 7
IF                   : 41
IN                   : 44
INHERITS             : 5
INTEGER              : 28
ISVOID               : 32
LARROW               : 13 34 46 48
LBRACE               : 4 5 10 11 43
LE                   : 24
LET                  : 44
LOOP                 : 42
LPAREN               : 10 11 27 35 36 37 38 39 40 53
LT                   : 23
MINUS                : 19
NEW                  : 33
NOT                  : 26
OF                   : 49
PLUS                 : 18
POOL                 : 42
RARROW               : 50 51
RBRACE               : 4 5 10 11 43
RPAREN               : 10 11 27 35 36 37 38 39 40 53
SEMI                 : 3 9 51 56 57
STRING               : 29
THEN                 : 41
TILDE                : 22
TIMES                : 20
TRUE                 : 30
TYPE                 : 6
WHILE                : 42
error                : 

Nonterminals, with rules where they appear

case_list            : 49 51
class                : 3
classlist            : 1 3
exp                  : 10 11 13 18 18 19 19 20 20 21 21 22 23 23 24 24 25 25 26 27 32 34 37 38 39 40 41 41 41 42 42 44 46 48 49 50 51 53 54 55 56 57
exp_list             : 35 37 39 53 55
exp_list_semi        : 43 57
feature              : 9
featurelist          : 4 5 9
formal               : 14 15
formals              : 10 15
identifier           : 10 11 12 13 17 34 35 36 37 38 39 40 45 46 47 48 50 51 53 58
let_list             : 44 47 48
program              : 0
type                 : 4 5 5 10 11 12 13 17 33 45 46 47 48 50 51 53

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . classlist
    (2) classlist -> .
    (3) classlist -> . class SEMI classlist
    (4) class -> . CLASS type LBRACE featurelist RBRACE
    (5) class -> . CLASS type INHERITS type LBRACE featurelist RBRACE

    $end            reduce using rule 2 (classlist -> .)
    CLASS           shift and go to state 4

    program                        shift and go to state 1
    classlist                      shift and go to state 2
    class                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> classlist .

    $end            reduce using rule 1 (program -> classlist .)


state 3

    (3) classlist -> class . SEMI classlist

    SEMI            shift and go to state 5


state 4

    (4) class -> CLASS . type LBRACE featurelist RBRACE
    (5) class -> CLASS . type INHERITS type LBRACE featurelist RBRACE
    (6) type -> . TYPE

    TYPE            shift and go to state 7

    type                           shift and go to state 6

state 5

    (3) classlist -> class SEMI . classlist
    (2) classlist -> .
    (3) classlist -> . class SEMI classlist
    (4) class -> . CLASS type LBRACE featurelist RBRACE
    (5) class -> . CLASS type INHERITS type LBRACE featurelist RBRACE

    $end            reduce using rule 2 (classlist -> .)
    CLASS           shift and go to state 4

    class                          shift and go to state 3
    classlist                      shift and go to state 8

state 6

    (4) class -> CLASS type . LBRACE featurelist RBRACE
    (5) class -> CLASS type . INHERITS type LBRACE featurelist RBRACE

    LBRACE          shift and go to state 9
    INHERITS        shift and go to state 10


state 7

    (6) type -> TYPE .

    LBRACE          reduce using rule 6 (type -> TYPE .)
    INHERITS        reduce using rule 6 (type -> TYPE .)
    LARROW          reduce using rule 6 (type -> TYPE .)
    SEMI            reduce using rule 6 (type -> TYPE .)
    COMMA           reduce using rule 6 (type -> TYPE .)
    RPAREN          reduce using rule 6 (type -> TYPE .)
    PLUS            reduce using rule 6 (type -> TYPE .)
    MINUS           reduce using rule 6 (type -> TYPE .)
    TIMES           reduce using rule 6 (type -> TYPE .)
    DIVIDE          reduce using rule 6 (type -> TYPE .)
    LT              reduce using rule 6 (type -> TYPE .)
    LE              reduce using rule 6 (type -> TYPE .)
    EQUALS          reduce using rule 6 (type -> TYPE .)
    DOT             reduce using rule 6 (type -> TYPE .)
    AT              reduce using rule 6 (type -> TYPE .)
    IDENTIFIER      reduce using rule 6 (type -> TYPE .)
    THEN            reduce using rule 6 (type -> TYPE .)
    LOOP            reduce using rule 6 (type -> TYPE .)
    OF              reduce using rule 6 (type -> TYPE .)
    RBRACE          reduce using rule 6 (type -> TYPE .)
    ELSE            reduce using rule 6 (type -> TYPE .)
    POOL            reduce using rule 6 (type -> TYPE .)
    FI              reduce using rule 6 (type -> TYPE .)
    IN              reduce using rule 6 (type -> TYPE .)
    ESAC            reduce using rule 6 (type -> TYPE .)
    RARROW          reduce using rule 6 (type -> TYPE .)


state 8

    (3) classlist -> class SEMI classlist .

    $end            reduce using rule 3 (classlist -> class SEMI classlist .)


state 9

    (4) class -> CLASS type LBRACE . featurelist RBRACE
    (8) featurelist -> .
    (9) featurelist -> . feature SEMI featurelist
    (10) feature -> . identifier LPAREN formals RPAREN COLON type LBRACE exp RBRACE
    (11) feature -> . identifier LPAREN RPAREN COLON type LBRACE exp RBRACE
    (12) feature -> . identifier COLON type
    (13) feature -> . identifier COLON type LARROW exp
    (7) identifier -> . IDENTIFIER

    RBRACE          reduce using rule 8 (featurelist -> .)
    IDENTIFIER      shift and go to state 14

    featurelist                    shift and go to state 11
    feature                        shift and go to state 12
    identifier                     shift and go to state 13

state 10

    (5) class -> CLASS type INHERITS . type LBRACE featurelist RBRACE
    (6) type -> . TYPE

    TYPE            shift and go to state 7

    type                           shift and go to state 15

state 11

    (4) class -> CLASS type LBRACE featurelist . RBRACE

    RBRACE          shift and go to state 16


state 12

    (9) featurelist -> feature . SEMI featurelist

    SEMI            shift and go to state 17


state 13

    (10) feature -> identifier . LPAREN formals RPAREN COLON type LBRACE exp RBRACE
    (11) feature -> identifier . LPAREN RPAREN COLON type LBRACE exp RBRACE
    (12) feature -> identifier . COLON type
    (13) feature -> identifier . COLON type LARROW exp

    LPAREN          shift and go to state 18
    COLON           shift and go to state 19


state 14

    (7) identifier -> IDENTIFIER .

    LPAREN          reduce using rule 7 (identifier -> IDENTIFIER .)
    COLON           reduce using rule 7 (identifier -> IDENTIFIER .)
    LARROW          reduce using rule 7 (identifier -> IDENTIFIER .)
    PLUS            reduce using rule 7 (identifier -> IDENTIFIER .)
    MINUS           reduce using rule 7 (identifier -> IDENTIFIER .)
    TIMES           reduce using rule 7 (identifier -> IDENTIFIER .)
    DIVIDE          reduce using rule 7 (identifier -> IDENTIFIER .)
    LT              reduce using rule 7 (identifier -> IDENTIFIER .)
    LE              reduce using rule 7 (identifier -> IDENTIFIER .)
    EQUALS          reduce using rule 7 (identifier -> IDENTIFIER .)
    DOT             reduce using rule 7 (identifier -> IDENTIFIER .)
    AT              reduce using rule 7 (identifier -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 7 (identifier -> IDENTIFIER .)
    SEMI            reduce using rule 7 (identifier -> IDENTIFIER .)
    RPAREN          reduce using rule 7 (identifier -> IDENTIFIER .)
    THEN            reduce using rule 7 (identifier -> IDENTIFIER .)
    LOOP            reduce using rule 7 (identifier -> IDENTIFIER .)
    OF              reduce using rule 7 (identifier -> IDENTIFIER .)
    RBRACE          reduce using rule 7 (identifier -> IDENTIFIER .)
    COMMA           reduce using rule 7 (identifier -> IDENTIFIER .)
    ELSE            reduce using rule 7 (identifier -> IDENTIFIER .)
    POOL            reduce using rule 7 (identifier -> IDENTIFIER .)
    FI              reduce using rule 7 (identifier -> IDENTIFIER .)
    IN              reduce using rule 7 (identifier -> IDENTIFIER .)
    ESAC            reduce using rule 7 (identifier -> IDENTIFIER .)


state 15

    (5) class -> CLASS type INHERITS type . LBRACE featurelist RBRACE

    LBRACE          shift and go to state 20


state 16

    (4) class -> CLASS type LBRACE featurelist RBRACE .

    SEMI            reduce using rule 4 (class -> CLASS type LBRACE featurelist RBRACE .)


state 17

    (9) featurelist -> feature SEMI . featurelist
    (8) featurelist -> .
    (9) featurelist -> . feature SEMI featurelist
    (10) feature -> . identifier LPAREN formals RPAREN COLON type LBRACE exp RBRACE
    (11) feature -> . identifier LPAREN RPAREN COLON type LBRACE exp RBRACE
    (12) feature -> . identifier COLON type
    (13) feature -> . identifier COLON type LARROW exp
    (7) identifier -> . IDENTIFIER

    RBRACE          reduce using rule 8 (featurelist -> .)
    IDENTIFIER      shift and go to state 14

    feature                        shift and go to state 12
    featurelist                    shift and go to state 21
    identifier                     shift and go to state 13

state 18

    (10) feature -> identifier LPAREN . formals RPAREN COLON type LBRACE exp RBRACE
    (11) feature -> identifier LPAREN . RPAREN COLON type LBRACE exp RBRACE
    (14) formals -> . formal
    (15) formals -> . formal COMMA formals
    (16) formals -> .
    (17) formal -> . identifier COLON type
    (7) identifier -> . IDENTIFIER

  ! shift/reduce conflict for RPAREN resolved as shift
    RPAREN          shift and go to state 24
    IDENTIFIER      shift and go to state 14

  ! RPAREN          [ reduce using rule 16 (formals -> .) ]

    identifier                     shift and go to state 22
    formals                        shift and go to state 23
    formal                         shift and go to state 25

state 19

    (12) feature -> identifier COLON . type
    (13) feature -> identifier COLON . type LARROW exp
    (6) type -> . TYPE

    TYPE            shift and go to state 7

    type                           shift and go to state 26

state 20

    (5) class -> CLASS type INHERITS type LBRACE . featurelist RBRACE
    (8) featurelist -> .
    (9) featurelist -> . feature SEMI featurelist
    (10) feature -> . identifier LPAREN formals RPAREN COLON type LBRACE exp RBRACE
    (11) feature -> . identifier LPAREN RPAREN COLON type LBRACE exp RBRACE
    (12) feature -> . identifier COLON type
    (13) feature -> . identifier COLON type LARROW exp
    (7) identifier -> . IDENTIFIER

    RBRACE          reduce using rule 8 (featurelist -> .)
    IDENTIFIER      shift and go to state 14

    featurelist                    shift and go to state 27
    feature                        shift and go to state 12
    identifier                     shift and go to state 13

state 21

    (9) featurelist -> feature SEMI featurelist .

    RBRACE          reduce using rule 9 (featurelist -> feature SEMI featurelist .)


state 22

    (17) formal -> identifier . COLON type

    COLON           shift and go to state 28


state 23

    (10) feature -> identifier LPAREN formals . RPAREN COLON type LBRACE exp RBRACE

    RPAREN          shift and go to state 29


state 24

    (11) feature -> identifier LPAREN RPAREN . COLON type LBRACE exp RBRACE

    COLON           shift and go to state 30


state 25

    (14) formals -> formal .
    (15) formals -> formal . COMMA formals

    RPAREN          reduce using rule 14 (formals -> formal .)
    COMMA           shift and go to state 31


state 26

    (12) feature -> identifier COLON type .
    (13) feature -> identifier COLON type . LARROW exp

    SEMI            reduce using rule 12 (feature -> identifier COLON type .)
    LARROW          shift and go to state 32


state 27

    (5) class -> CLASS type INHERITS type LBRACE featurelist . RBRACE

    RBRACE          shift and go to state 33


state 28

    (17) formal -> identifier COLON . type
    (6) type -> . TYPE

    TYPE            shift and go to state 7

    type                           shift and go to state 34

state 29

    (10) feature -> identifier LPAREN formals RPAREN . COLON type LBRACE exp RBRACE

    COLON           shift and go to state 35


state 30

    (11) feature -> identifier LPAREN RPAREN COLON . type LBRACE exp RBRACE
    (6) type -> . TYPE

    TYPE            shift and go to state 7

    type                           shift and go to state 36

state 31

    (15) formals -> formal COMMA . formals
    (14) formals -> . formal
    (15) formals -> . formal COMMA formals
    (16) formals -> .
    (17) formal -> . identifier COLON type
    (7) identifier -> . IDENTIFIER

    RPAREN          reduce using rule 16 (formals -> .)
    IDENTIFIER      shift and go to state 14

    formal                         shift and go to state 25
    formals                        shift and go to state 37
    identifier                     shift and go to state 22

state 32

    (13) feature -> identifier COLON type LARROW . exp
    (18) exp -> . exp PLUS exp
    (19) exp -> . exp MINUS exp
    (20) exp -> . exp TIMES exp
    (21) exp -> . exp DIVIDE exp
    (22) exp -> . TILDE exp
    (23) exp -> . exp LT exp
    (24) exp -> . exp LE exp
    (25) exp -> . exp EQUALS exp
    (26) exp -> . NOT exp
    (27) exp -> . LPAREN exp RPAREN
    (28) exp -> . INTEGER
    (29) exp -> . STRING
    (30) exp -> . TRUE
    (31) exp -> . FALSE
    (32) exp -> . ISVOID exp
    (33) exp -> . NEW type
    (34) exp -> . identifier LARROW exp
    (35) exp -> . identifier LPAREN exp_list RPAREN
    (36) exp -> . identifier LPAREN RPAREN
    (37) exp -> . exp identifier LPAREN exp_list RPAREN
    (38) exp -> . exp identifier LPAREN RPAREN
    (39) exp -> . exp DOT identifier LPAREN exp_list RPAREN
    (40) exp -> . exp DOT identifier LPAREN RPAREN
    (41) exp -> . IF exp THEN exp ELSE exp FI
    (42) exp -> . WHILE exp LOOP exp POOL
    (43) exp -> . LBRACE exp_list_semi RBRACE
    (44) exp -> . LET let_list IN exp
    (49) exp -> . CASE exp OF case_list ESAC
    (53) exp -> . exp AT type DOT identifier LPAREN exp_list RPAREN
    (58) exp -> . identifier
    (7) identifier -> . IDENTIFIER

    TILDE           shift and go to state 40
    NOT             shift and go to state 41
    LPAREN          shift and go to state 42
    INTEGER         shift and go to state 43
    STRING          shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46
    ISVOID          shift and go to state 47
    NEW             shift and go to state 48
    IF              shift and go to state 49
    WHILE           shift and go to state 50
    LBRACE          shift and go to state 51
    LET             shift and go to state 52
    CASE            shift and go to state 53
    IDENTIFIER      shift and go to state 14

    identifier                     shift and go to state 38
    exp                            shift and go to state 39

state 33

    (5) class -> CLASS type INHERITS type LBRACE featurelist RBRACE .

    SEMI            reduce using rule 5 (class -> CLASS type INHERITS type LBRACE featurelist RBRACE .)


state 34

    (17) formal -> identifier COLON type .

    COMMA           reduce using rule 17 (formal -> identifier COLON type .)
    RPAREN          reduce using rule 17 (formal -> identifier COLON type .)


state 35

    (10) feature -> identifier LPAREN formals RPAREN COLON . type LBRACE exp RBRACE
    (6) type -> . TYPE

    TYPE            shift and go to state 7

    type                           shift and go to state 54

state 36

    (11) feature -> identifier LPAREN RPAREN COLON type . LBRACE exp RBRACE
